--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "require": {
     "php": ">=5.6",
     "zanphp/contracts": "dev-master",
-    "zanphp/container": "dev-master",
+    "zanphp/container": "dev-laogui",
     "zanphp/exception": "dev-master",
     "zanphp/support": "dev-master",
     "zanphp/http-client": "dev-laogui",
